@@ -61,7 +61,7 @@ public class ChatLogCommand implements CommandExecutor, TabCompleter {
         String targetName = onlineTarget == null
                 ? plugin.getDatabaseManager().getLastKnownUsername(targetUuid)
                 : onlineTarget.getName();
-        if (targetName == null || targetName.isBlank()) {
+        if (targetName == null || targetName.trim().isEmpty()) {
             targetName = input;
         }
 
