@@ -212,7 +212,7 @@ public class PunishmentsListMenu extends BaseMenu {
         int inputLine = menus().getInt(MENU_PATH + ".SEARCH-SIGN.INPUT-LINE", 0);
 
         SignInputUtil.open(plugin, player, signLines, inputLine, text -> {
-            if (text != null && !text.isBlank() && !text.equalsIgnoreCase("cancel")) {
+            if (text != null && !text.trim().isEmpty() && !text.equalsIgnoreCase("cancel")) {
                 String trimmed = text.trim();
                 search = trimmed.length() > MAX_SEARCH_LENGTH ? trimmed.substring(0, MAX_SEARCH_LENGTH) : trimmed;
                 page = 0;
@@ -367,7 +367,7 @@ public class PunishmentsListMenu extends BaseMenu {
      */
     private String displayNameFor(PunishmentRecord record) {
         String snapshot = record.getTargetNameSnapshot();
-        if (snapshot != null && !snapshot.isBlank()) {
+        if (snapshot != null && !snapshot.trim().isEmpty()) {
             return snapshot;
         }
         UUID uuid = record.getTargetUuid();
